# AP8PP-prime_checker

./: CMakeLists.txt  Main.qml  main.cpp  primechecker.cpp  primechecker.h
